[bumpversion]
files = pdb2pqr/src/aconf.py setup.py
commit = False
tag = False
message = "Release {new_version}"
current_version = "2.1.2a9"

[aliases]
test = pytest

[tool:pytest]
addopts =
    -sx -vv --cov=pdb2pqr --ignore=setup.py
    --ignore=tests/test_standalone_pipeline.py
    --ignore=tests/test_database_pipeline.py
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL

[flake8]
ignore = D100,D101,D102,D103,D105,E402
max-line-length = 99
exclude = __init__.py

[metadata]
description-file = README.md
